2nd alignment fix on 404 page

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -214,7 +214,7 @@ body {
 	color: #fff;
 	font-size: calc(1 * (1vh + 1vw));
 	width: 21vw;
-	left: 38.5vw;
+	left: 37.5vw;
 	padding: 2vh;
 	position: absolute;
 	display: inline;
